tests/typechecker/should_fail/fields_6.csp
datatype X = G.{0} | H.{1}
channel e : X

P2(x,y,0) = STOP

V = e?x:{G,H}?y -> P2(x,y,0)
